# mysim

./: .coverage  .gitignore  notes.txt  pyproject.toml  requirements.md  requirements_v2.md  webui_requirements.md  webui_requirements_v2.md
config/: example.yaml
scenarios/: example.yaml  example2.yaml
src/mysim/: __init__.py  cli.py  config.py  engine.py  hooks.py  output.py  plugin.py  state.py  validation.py
src/mysim/plugins/: german_tax_insurance.py  growth.py  inflation.py  inflows.py  outflows.py  pre_tax_summary.py  reconcile.py
src/mysim/web/: __init__.py  app.py  exports.py  filters.py  persistence.py  routes.py  run.py  security.py
src/mysim/web/static/: app.js  print.css  style.css
src/mysim/web/templates/: base.html  configure.html  error.html  index.html  results.html  trace_fragment.html
tests/: conftest.py  test_baseline.py  test_cli.py  test_config_and_validation.py  test_german_tax.py  test_german_tax_logic.py  test_output_and_filters.py  test_plugins.py  test_web.py
