[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mysim"
version = "0.1.0"
description = "A plugin-driven financial simulation engine for retirement planning"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
mysim = "mysim.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mysim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
